--- a/waitfor/plugin.yaml
+++ b/waitfor/plugin.yaml
@@ -1,5 +1,5 @@
 name: waitfor
-version: 1.0
+version: 1.0.0
 rundeckPluginVersion: 1.2
 author: alexh
 date: Wed Mar 16 14:09:49 PDT 2016
@@ -201,7 +201,7 @@ providers:
     title: '*nixy / waitfor / port-open'
     description: 'wait for the network service to be reachable'
     plugin-type: script
-    script-interpreter: /bin/bash
+    script-interpreter: /usr/bin/env bash
     script-file: port-open
     script-args: ${config.host} ${config.port} ${config.interval} ${config.maxtry}
     config:
