--- a/file/build.gradle
+++ b/file/build.gradle
@@ -7,6 +7,6 @@ ext.archivesBaseName = "file"
 ext.pluginBaseFolder ="."
 
 project.version = scmVersion.version
-ext.archiveFilename = ext.archivesBaseName + '-' + version 
+ext.archiveFilename = ext.archivesBaseName + '-v' + version 
 
 apply from: 'https://raw.githubusercontent.com/rundeck-plugins/build-zip/master/build.gradle'
