Adding local-script to the build process

--- a/file/build.gradle
+++ b/file/build.gradle
@@ -6,7 +6,7 @@ ext.buildDateString=new Date().format("yyyy-MM-dd'T'HH:mm:ssX")
 ext.archivesBaseName = "file"
 ext.pluginBaseFolder ="."
 
-project.version = scmVersion.version
-ext.archiveFilename = ext.archivesBaseName + '-v' + version 
+project.version = 'v' + scmVersion.version
+ext.archiveFilename = ext.archivesBaseName + '-' + version
 
 apply from: 'https://raw.githubusercontent.com/rundeck-plugins/build-zip/master/build.gradle'
