--- a/local-script/build.gradle
+++ b/local-script/build.gradle
@@ -1,13 +1,13 @@
-ext.pluginName = 'nixy-local-script'
-ext.pluginDescription = "execute a script locally"
+ext.pluginName = 'nixy-step-plugins'
+ext.pluginDescription = "executes the puppet apply command on each node matching the Job node filter"
 ext.sopsCopyright = "© 2018, Rundeck, Inc."
 ext.sopsUrl = "http://rundeck.com"
 ext.buildDateString=new Date().format("yyyy-MM-dd'T'HH:mm:ssX")
-ext.archivesBaseName ="waitfor"
+ext.archivesBaseName ="local-script"
 ext.pluginBaseFolder ="."
 
-project.version = scmVersion.version
-ext.archiveFilename = ext.archivesBaseName + '-v' + version 
+project.version = 'v' + scmVersion.version
+ext.archiveFilename = ext.archivesBaseName + '-' + version
 
 apply from: 'https://raw.githubusercontent.com/rundeck-plugins/build-zip/master/build.gradle'
 
