adding waitfor/local/ping and waitfpr/local/port-open

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 scmVersion {
-    ignoreUncommittedChanges = true
+    ignoreUncommittedChanges = false
     tag {
         prefix = 'v'
         versionSeparator = ''
