--- a/file/plugin.yaml
+++ b/file/plugin.yaml
@@ -1,8 +1,9 @@
 name: nixy-file
-version: 1.0.0
 rundeckPluginVersion: 1.2
-author: alexh
-date: Tue Nov 1 14:09:49 PDT 2016
+author: "@author@"
+date: "@date@"
+version: "@version@"
+url: "@url@"
 providers:
   - name: nixy-file-contains
     service: RemoteScriptNodeStep
