Add required args to script args for wait for dir script. Fix #14

--- a/waitfor/plugin.yaml
+++ b/waitfor/plugin.yaml
@@ -21,7 +21,7 @@ providers:
     plugin-type: script
     script-interpreter: /usr/bin/env bash
     script-file: dir-exists
-    script-args: ${config.dir}
+    script-args: ${config.dir} ${config.interval} ${config.maxtry}
     config:
       - type: String
         name: dir
