--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,54 +1,64 @@
 name: Java CI
 
-on: [push]
+on: 
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Get Fetch Tags
-      run: git -c protocol.version=2 fetch --tags --progress --no-recurse-submodules origin
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v4
       with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+        java-version: '11'
+        distribution: 'temurin'
+
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+      with:
+        gradle-home-cache-cleanup: true
+
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build --parallel
+
     - name: Get Release Version
       id: get_version
-      run: VERSION=$(./gradlew currentVersion -q -Prelease.quiet) && echo ::set-output name=VERSION::$VERSION
+      run: |
+        VERSION=$(./gradlew currentVersion -q -Prelease.quiet)
+        echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
     - name: Upload command plugin zip
-      uses: actions/upload-artifact@v4.0.0
+      uses: actions/upload-artifact@v4
       with:
-        # Artifact name
         name: command-${{ steps.get_version.outputs.VERSION }}
-        # Directory containing files to upload
         path: ./command/build/libs/command-v${{ steps.get_version.outputs.VERSION }}.zip
+        if-no-files-found: error
+
     - name: Upload file plugin zip
-      uses: actions/upload-artifact@v4.0.0
+      uses: actions/upload-artifact@v4
       with:
-        # Artifact name
         name: file-${{ steps.get_version.outputs.VERSION }}
-        # Directory containing files to upload
         path: ./file/build/libs/file-v${{ steps.get_version.outputs.VERSION }}.zip
+        if-no-files-found: error
+
     - name: Upload local-script plugin zip
-      uses: actions/upload-artifact@v4.0.0
+      uses: actions/upload-artifact@v4
       with:
-        # Artifact name
         name: local-script-${{ steps.get_version.outputs.VERSION }}
-        # Directory containing files to upload
         path: ./local-script/build/libs/local-script-v${{ steps.get_version.outputs.VERSION }}.zip
+        if-no-files-found: error
+
     - name: Upload waitfor plugin zip
-      uses: actions/upload-artifact@v4.0.0
+      uses: actions/upload-artifact@v4
       with:
-        # Artifact name
         name: waitfor-${{ steps.get_version.outputs.VERSION }}
-        # Directory containing files to upload
         path: ./waitfor/build/libs/waitfor-v${{ steps.get_version.outputs.VERSION }}.zip
+        if-no-files-found: error
