--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,11 @@
 group=org.rundeck.rundeck-plugins
+
+# Modern Gradle configuration
+org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.daemon=true
+
+# Java toolchain configuration
+org.gradle.java.installations.auto-detect=true
+org.gradle.java.installations.auto-download=true
