--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
+rootProject.name = 'nixy-step-plugins'
+
 include 'waitfor', 'file', 'local-script', 'command'
+
+// Enable modern Gradle features
+enableFeaturePreview('TYPESAFE_PROJECT_ACCESSORS')
 
